test/scc/decl/semantic-errors/038.a
038.t:6:1: error: 'A' defined as wrong kind of tag